# gnome-shell-extension-xrdesktop

./: .gitlab-ci.yml  LICENSE  README.md  meson.build
.gitlab-ci/debian_sid/: changelog  control  copyright  rules
.gitlab-ci/debian_sid/extra/: prepare-commit-package.sh
.gitlab-ci/debian_sid/upstream/: metadata
gnomevr-extension@collabora.com/: extension.js  meson.build  metadata.json  stylesheet.css
xrdesktop-extension@collabora.com/: extension.js  meson.build  metadata.json
